@@ -1,5 +1,4 @@
-jextract --source -D FORCE_OPENBLAS_COMPLEX_STRUCT \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
+jextract --output src -D FORCE_OPENBLAS_COMPLEX_STRUCT \
   -l openblas -t blas /usr/local/opt/openblas/include/cblas.h
 
-javac --enable-preview --source=21 blas/*.java
+javac --source=22 -d . src/blas/*.java
