@@ -1,3 +1,2 @@
 java --enable-native-access=ALL-UNNAMED \
-   --enable-preview --source=21 \
-   -Djava.library.path=/usr/local/Cellar/ffmpeg@4/4.4.4/lib LibffmpegMain.java $*
+   -Djava.library.path=/usr/local/Cellar/ffmpeg@4/4.4.4_4/lib LibffmpegMain.java $*
