@@ -1,3 +1,2 @@
 java --enable-native-access=ALL-UNNAMED \
-   --enable-preview --source=21 \
    -Djava.library.path=/usr/lib LibprocMain.java
