@@ -1,8 +1,7 @@
-jextract --source \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/ \
+jextract --output src \
   -t org.tensorflow \
   -I ${LIBTENSORFLOW_HOME}/include \
   -l ${LIBTENSORFLOW_HOME}/lib/libtensorflow.dylib \
   ${LIBTENSORFLOW_HOME}/include/tensorflow/c/c_api.h
 
-javac --enable-preview --source=21 org/tensorflow/*.java
+javac --source=22 -d . src/org/tensorflow/*.java
